Minimal changes required to make code compile with JDK 22, 23 and 24.